--- a/views/index.html
+++ b/views/index.html
@@ -16,8 +16,8 @@
       <!-- display tweets here -->
       {% for tweet in tweets %}
       <ul>
-        <li class="twitterName">{{tweet.name}}</li>
-        <li>{{tweet.content}}</li>
+        <li class="twitterName"><a href="/users/{{tweet.name}}">{{tweet.name}}</a></li>
+        <li><a href="/tweets/{{tweet.id}}">{{tweet.content}}</a></li>
       </ul>
       {% endfor %}
     </div>
