--- a/views/index.html
+++ b/views/index.html
@@ -28,14 +28,17 @@
       <b>Your Name</b><br>
       100 followers
     </div>
-    <div class="col-md-9">
 
+    <div class="col-md-9">
       <!-- display tweets here -->
       {% for tweet in tweets %}
-      <ul>
-        <li class="twitterName"><a href="/users/{{tweet.name}}">{{tweet.name}}</a></li>
-        <li><a href="/tweets/{{tweet.id}}">{{tweet.content}}</a></li>
-      </ul>
+      <div class="tweetbox">
+        <img>
+        <div class="content">
+            <p class="twitterName"><a href="/users/{{tweet.name}}">{{tweet.name}}</a></p>
+            <p><a href="/tweets/{{tweet.id}}">{{tweet.content}}</a></p>
+        </div>
+      </div>
       {% endfor %}
     </div>
   </div>
