--- a/views/layout.html
+++ b/views/layout.html
@@ -79,7 +79,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
   </body>
-  <script src="/socket.io/socket.io.js"></script>
+  <!--<script src="/socket.io/socket.io.js"></script>
   <script>
     // Load the socket.io library above, then connect to the server.
     // Because the socket.io server is being run on the same server as your
@@ -94,5 +94,5 @@
       alert('Refreshing... check the console...');
       // some logic to add the new tweet to the DOM…
     });
-  </script>
+  </script>-->
 </html>
